// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography Heading renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 1.5rem;
  font-weight: bold;
  margin-bottom: 1rem;
}

<h2
    class="c0"
  >
    Heading
  </h2>
</DocumentFragment>
`;

exports[`Typography Paragraph renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  margin-bottom: 1rem;
}

.c0:last-child {
  margin-bottom: 0;
}

<p
    class="c0"
  >
    Paragraph
  </p>
</DocumentFragment>
`;

exports[`Typography SubHeading renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  color: #666666;
  font-weight: bold;
  text-transform: uppercase;
}

<h3
    class="c0"
  >
    SubHeading
  </h3>
</DocumentFragment>
`;

exports[`Typography Title renders correctly 1`] = `
<DocumentFragment>
  .c0 {
  font-size: 2rem;
  font-weight: bold;
}

<h1
    class="c0"
  >
    Title
  </h1>
</DocumentFragment>
`;
